--- a/src/components/debuggrid/debuggrid.component.sass
+++ b/src/components/debuggrid/debuggrid.component.sass
@@ -3,6 +3,7 @@
     height: 100vh
     position: fixed
     width: 100%
+    z-index: 999
     
     .wrapper
         height: inherit
@@ -14,10 +15,46 @@
     .childFlex
         +col()
         +size(1)
+        +size-sm(1)
         +size-md(1)
         +size-lg(1)
         height: inherit
         outline:  1px solid #ff0
         background: rgba(0, 0, 0, 0.4)
-    @include debugBtn()
+    &-btn 
+        display: flex
+        justify-content: center
+        position: fixed
+        right: 0
+        bottom: 0
+        width: 50px
+        height: 50px
+        border: 1px solid #ff0
+        border-radius: 50%
+        z-index: 1000
+        background: rgba(0, 0, 0, 0.4)
+
+        &__hidden 
+            display: none
+
+        &:before,
+        &:after 
+            content: ''
+            align-self: center
+            background: #000
+        
+
+        &:before 
+            width: 25px
+            height: 2px
+
+        &__create 
+            &:after 
+                width: 2px
+                height: 25px
+                position: absolute
+    
+
+    &__z-index-negative 
+        // z-index: -1
 /* __debugGrid__ */
