--- a/src/components/footer/footer.component.pug
+++ b/src/components/footer/footer.component.pug
@@ -15,7 +15,7 @@ footer.footer
                 .footerContactsItem
                     i.icon.icon-location-png 
                     address 1201 East 5th Street North Little Rock, Arkansas USA, 72114
-        .footerFlexContainer
+        .footerFlexContainer.footerAdvantages
             .footerAdvantagesItem
                 .footerAdvantagesItem__title
                     i.icon.icon-lifetime-png
@@ -40,11 +40,9 @@ footer.footer
             hr
             .footerLinks
                 a(href="javascript:void(0)") Acura 
-                a(href="javascript:void(0)") Alfa 
-                a(href="javascript:void(0)") Romeo 
+                a(href="javascript:void(0)") Alfa Romeo 
                 a(href="javascript:void(0)") Alpina 
-                a(href="javascript:void(0)") Aston 
-                a(href="javascript:void(0)") Martin 
+                a(href="javascript:void(0)") Aston Martin
                 a(href="javascript:void(0)") Audi 
                 a(href="javascript:void(0)") Baojun 
                 a(href="javascript:void(0)") Beiben 
@@ -80,8 +78,7 @@ footer.footer
                 a(href="javascript:void(0)") Geely 
                 a(href="javascript:void(0)") GMC 
                 a(href="javascript:void(0)") GMW 
-                a(href="javascript:void(0)") Great 
-                a(href="javascript:void(0)") Wall 
+                a(href="javascript:void(0)") Great Wall
                 a(href="javascript:void(0)") Guangqi 
             .footerLinks
                 a(href="javascript:void(0)") Haval 
@@ -103,8 +100,7 @@ footer.footer
                 a(href="javascript:void(0)") Lada 
                 a(href="javascript:void(0)") Lamborghini 
                 a(href="javascript:void(0)") Lancia 
-                a(href="javascript:void(0)") Land 
-                a(href="javascript:void(0)") Rover 
+                a(href="javascript:void(0)") Land Rover
                 a(href="javascript:void(0)") Landwind 
                 a(href="javascript:void(0)") Lexus 
                 a(href="javascript:void(0)") Lifan 
@@ -143,8 +139,7 @@ footer.footer
             .footerLinks
                 a(href="javascript:void(0)") Scion 
                 a(href="javascript:void(0)") Seat 
-                a(href="javascript:void(0)") Sino 
-                a(href="javascript:void(0)") Truck 
+                a(href="javascript:void(0)") Sino Truck
                 a(href="javascript:void(0)") Skoda 
                 a(href="javascript:void(0)") Smart 
                 a(href="javascript:void(0)") Soueast 
@@ -164,3 +159,16 @@ footer.footer
                 a(href="javascript:void(0)") Wey 
                 a(href="javascript:void(0)") XCMG 
                 a(href="javascript:void(0)") Zotye
+.privacy
+    .wrapper
+        .footerPrivacy
+            div.item1
+                p © Copyright 2016 - 2021 RSCHIP. All Rights Reserved.
+            div.item2.social
+                .icon.icon-instagram
+                .icon.icon-facebook
+                .icon.icon-youtube
+            div.item3 
+                a(href="javascript:void(0)") Privacy PolicyApp 
+                a(href="javascript:void(0)") Privacy Policy
+            
