--- a/src/sass/base/base.sass
+++ b/src/sass/base/base.sass
@@ -31,6 +31,9 @@ body
   color: $color_white
 
 a, button
+  white-space: nowrap
+  
+a, button
   cursor: pointer
   &:focus
     outline: none
@@ -59,9 +62,6 @@ h1
   font-weight: 800
   font-size: 24px
   line-height: 125%
-  +xs-block
-    font-size: 24px
-    line-height: 125%
 
   +sm-block
     font-size: 48px
