--- a/src/sass/styles-sprites.sass
+++ b/src/sass/styles-sprites.sass
@@ -10,11 +10,11 @@
     +sprite($icon-cart-png)
 .icon-chat-png
     +sprite($icon-chat-png)
-.icon-facebook-png
+.icon-facebook
     +sprite($icon-facebook-png)
 .icon-info-png
     +sprite($icon-info-png)
-.icon-instagram-png
+.icon-instagram
     +sprite($icon-instagram-png)
 .icon-location-png
     +sprite($icon-location-png)
@@ -22,7 +22,7 @@
     +sprite($icon-mail-png)
 .icon-phone-png
     +sprite($icon-phone-png)
-.icon-youtube-png
+.icon-youtube
     +sprite($icon-youtube-png)
 .icon-lifetime-png
     +sprite($icon-lifetime-png)
