--- a/src/components/footer/footer.component.sass
+++ b/src/components/footer/footer.component.sass
@@ -1,14 +1,44 @@
 /*footer*/
 .footer
+    position: relative
     background: #111111
-    // padding-top: 44px
     padding-top: 53px
+
+    &::before
+        content: ''
+        position: absolute
+        background: linear-gradient(90deg, #FF4587 0%, #FF5438 100%)
+        filter: blur(500px)
+        width: 544px
+        height: 261px
+        
+        left: 50%
+        bottom: 0
+        transform: translate(-50%, -50%)
+
+
+    &::after
+        content: ''
+        position: absolute
+        background: #111111
+        width: 100%
+        height: 100%
+        top: 0
+        left: 0
+    
+    .wrapper
+        position: relative
+        z-index: 10
     h4
         +col()
         width: 100%
+        margin-top: 66px
+        margin-bottom: 14px
+        font-weight: bold
     hr
         +col()
         width: 100%
+        margin-bottom: 30px
 
 .footerFlexContainer
     +row-flex()
@@ -57,6 +87,13 @@
         +size(9)
         +size-md(9)
         +size-lg(9)
+.footerAdvantages
+    display: none
+    +md-block
+        display: block
+    +lg-block
+          display: block
+
 .footerAdvantagesItem
     +col()
     +size(9)
@@ -70,6 +107,9 @@
         background-image: linear-gradient(transparent, transparent), linear-gradient(to right, #700ED2 , #FF3838)
         background-clip: text
         color: transparent
+        margin-left: 45px
+        margin-top: 55px
+        display: inline-block
     h5
         margin-left: 20px
 
@@ -82,6 +122,50 @@
     
 .footerLinks
     +col()
-    +size(9)
+    +size-sm(2.25)
     +size-md(1)
     +size-lg(1)
+    margin-bottom: 66px
+
+    
+    &:last-child
+        display: none
+        +md-block
+            display: block
+        +lg-block
+            display: block
+    a
+        display: inline-block
+        width: 100%
+        margin-bottom: 9px
+
+.footerPrivacy
+    +row-flex()
+    padding: 40px 0
+
+    div
+        +col()
+    .item1
+        +size-md(4)
+        +size-lg(4)
+    .item2
+        +size-md(2)
+        +size-lg(2)
+    .item3
+        +size-md(3)
+        +size-lg(3)
+
+        display: flex
+        justify-content: flex-end
+        a
+            margin: 0 15px
+            &:last-child
+                margin-right: 0
+            
+    p,
+    a
+        color: #B2B2B2
+        opacity: 0.5
+        font-size: 15px
+        line-height: 29px
+        letter-spacing: .6px
