--- a/src/sass/_allComponents.sass
+++ b/src/sass/_allComponents.sass
@@ -30,21 +30,14 @@
             width: auto
         +lg-block
             width: auto
-.social
-    display: flex
-    margin: 47px -15px 55px
-    +md-block
-        position: absolute
-        bottom: 85px
-        margin: 0 -15px
-    .icon
-        margin: 0 15px
+
 
 /* __debugGrid__ */
 .debugGrid
     height: 100vh
     position: fixed
     width: 100%
+    z-index: 999
     
     .wrapper
         height: inherit
@@ -56,24 +49,90 @@
     .childFlex
         +col()
         +size(1)
+        +size-sm(1)
         +size-md(1)
         +size-lg(1)
         height: inherit
         outline:  1px solid #ff0
         background: rgba(0, 0, 0, 0.4)
-    @include debugBtn()
+    &-btn 
+        display: flex
+        justify-content: center
+        position: fixed
+        right: 0
+        bottom: 0
+        width: 50px
+        height: 50px
+        border: 1px solid #ff0
+        border-radius: 50%
+        z-index: 1000
+        background: rgba(0, 0, 0, 0.4)
+
+        &__hidden 
+            display: none
+
+        &:before,
+        &:after 
+            content: ''
+            align-self: center
+            background: #000
+        
+
+        &:before 
+            width: 25px
+            height: 2px
+
+        &__create 
+            &:after 
+                width: 2px
+                height: 25px
+                position: absolute
+    
+
+    &__z-index-negative 
+        // z-index: -1
 /* __debugGrid__ */
 /*footer*/
 .footer
+    position: relative
     background: #111111
-    // padding-top: 44px
     padding-top: 53px
+
+    &::before
+        content: ''
+        position: absolute
+        background: linear-gradient(90deg, #FF4587 0%, #FF5438 100%)
+        filter: blur(500px)
+        width: 544px
+        height: 261px
+        
+        left: 50%
+        bottom: 0
+        transform: translate(-50%, -50%)
+
+
+    &::after
+        content: ''
+        position: absolute
+        background: #111111
+        width: 100%
+        height: 100%
+        top: 0
+        left: 0
+    
+    .wrapper
+        position: relative
+        z-index: 10
     h4
         +col()
         width: 100%
+        margin-top: 66px
+        margin-bottom: 14px
+        font-weight: bold
     hr
         +col()
         width: 100%
+        margin-bottom: 30px
 
 .footerFlexContainer
     +row-flex()
@@ -122,6 +181,13 @@
         +size(9)
         +size-md(9)
         +size-lg(9)
+.footerAdvantages
+    display: none
+    +md-block
+        display: block
+    +lg-block
+          display: block
+
 .footerAdvantagesItem
     +col()
     +size(9)
@@ -135,6 +201,9 @@
         background-image: linear-gradient(transparent, transparent), linear-gradient(to right, #700ED2 , #FF3838)
         background-clip: text
         color: transparent
+        margin-left: 45px
+        margin-top: 55px
+        display: inline-block
     h5
         margin-left: 20px
 
@@ -147,10 +216,53 @@
     
 .footerLinks
     +col()
-    +size(9)
+    +size-sm(2.25)
     +size-md(1)
     +size-lg(1)
+    margin-bottom: 66px
 
+    
+    &:last-child
+        display: none
+        +md-block
+            display: block
+        +lg-block
+            display: block
+    a
+        display: inline-block
+        width: 100%
+        margin-bottom: 9px
+
+.footerPrivacy
+    +row-flex()
+    padding: 40px 0
+
+    div
+        +col()
+    .item1
+        +size-md(4)
+        +size-lg(4)
+    .item2
+        +size-md(2)
+        +size-lg(2)
+    .item3
+        +size-md(3)
+        +size-lg(3)
+
+        display: flex
+        justify-content: flex-end
+        a
+            margin: 0 15px
+            &:last-child
+                margin-right: 0
+            
+    p,
+    a
+        color: #B2B2B2
+        opacity: 0.5
+        font-size: 15px
+        line-height: 29px
+        letter-spacing: .6px
 /*header*/
 .header
     position: sticky
@@ -239,8 +351,6 @@
     +size(9)
     +size-lg(9/2)
     font-size: 40px
-    +xs-block
-        font-size: 50px
 
     +sm-block
         font-size: 60px
