--- a/src/components/footer/footer.component.pug
+++ b/src/components/footer/footer.component.pug
@@ -35,10 +35,10 @@ footer.footer
                 p.page__text Free shipping worldwide to any location with DHL express and USPS.
                 a(href="javascript:void(0)") Read more 
 
-        .footerFlexContainer
+        .footerFlexContainer.footerLinks
             h4 Tuning 
             hr
-            .footerLinks
+            .footerLinksItem
                 a(href="javascript:void(0)") Acura 
                 a(href="javascript:void(0)") Alfa Romeo 
                 a(href="javascript:void(0)") Alpina 
@@ -52,7 +52,7 @@ footer.footer
                 a(href="javascript:void(0)") Borgward 
                 a(href="javascript:void(0)") Buick 
                 a(href="javascript:void(0)") BYD 
-            .footerLinks
+            .footerLinksItem
                 a(href="javascript:void(0)") Cadillac 
                 a(href="javascript:void(0)") Changan 
                 a(href="javascript:void(0)") Changfeng 
@@ -66,7 +66,7 @@ footer.footer
                 a(href="javascript:void(0)") Daewoo 
                 a(href="javascript:void(0)") Daihatsu 
                 a(href="javascript:void(0)") DFSK 
-            .footerLinks
+            .footerLinksItem
                 a(href="javascript:void(0)") Dodge 
                 a(href="javascript:void(0)") Dongfeng 
                 a(href="javascript:void(0)") FAW 
@@ -80,7 +80,7 @@ footer.footer
                 a(href="javascript:void(0)") GMW 
                 a(href="javascript:void(0)") Great Wall
                 a(href="javascript:void(0)") Guangqi 
-            .footerLinks
+            .footerLinksItem
                 a(href="javascript:void(0)") Haval 
                 a(href="javascript:void(0)") Hino 
                 a(href="javascript:void(0)") Holden 
@@ -94,7 +94,7 @@ footer.footer
                 a(href="javascript:void(0)") Jaguar 
                 a(href="javascript:void(0)") Jeep 
                 a(href="javascript:void(0)") KIA
-            .footerLinks 
+            .footerLinksItem 
                 a(href="javascript:void(0)") Kowloon 
                 a(href="javascript:void(0)") KTM 
                 a(href="javascript:void(0)") Lada 
@@ -108,7 +108,7 @@ footer.footer
                 a(href="javascript:void(0)") Lotus 
                 a(href="javascript:void(0)") Luxgen 
                 a(href="javascript:void(0)") Lynk 
-            .footerLinks
+            .footerLinksItem
                 a(href="javascript:void(0)") Mahindra 
                 a(href="javascript:void(0)") Maruti 
                 a(href="javascript:void(0)") Maserati 
@@ -122,7 +122,7 @@ footer.footer
                 a(href="javascript:void(0)") Nissan 
                 a(href="javascript:void(0)") Opel 
                 a(href="javascript:void(0)") Pagani 
-            .footerLinks
+            .footerLinksItem
                 a(href="javascript:void(0)") Pontiac 
                 a(href="javascript:void(0)") Porsche 
                 a(href="javascript:void(0)") Proton 
@@ -136,7 +136,7 @@ footer.footer
                 a(href="javascript:void(0)") SAIC 
                 a(href="javascript:void(0)") Sany 
                 a(href="javascript:void(0)") Saturn 
-            .footerLinks
+            .footerLinksItem
                 a(href="javascript:void(0)") Scion 
                 a(href="javascript:void(0)") Seat 
                 a(href="javascript:void(0)") Sino Truck
@@ -150,7 +150,7 @@ footer.footer
                 a(href="javascript:void(0)") Toyota 
                 a(href="javascript:void(0)") Troller 
                 a(href="javascript:void(0)") UAZ 
-            .footerLinks
+            .footerLinksItem
                 a(href="javascript:void(0)") Vauxhall 
                 a(href="javascript:void(0)") Vinfast 
                 a(href="javascript:void(0)") Volvo 
