--- a/src/components/header/header.component.pug
+++ b/src/components/header/header.component.pug
@@ -4,7 +4,6 @@ header.header
             .headerLogo
                 img(src="assets/images/png/logo.png", alt="logo")
             .headerNav
-                //- .child Header
                 nav.headerNavLinks
                     a.headerLink(href="javascript:void(0)") RS chip 
                     a.headerLink(href="javascript:void(0)") GTR Chip 
@@ -18,3 +17,6 @@ header.header
                 .headerNavBtn
                     a.page__btn(href="javascript:void(0)") Shop
                 .headerNavBurgerMenu
+                    .line
+                    .line
+                    .line
