--- a/src/components/header/header.component.sass
+++ b/src/components/header/header.component.sass
@@ -10,6 +10,14 @@
     +lg-block
         background: transparent
         // padding-top: 36px
+    .social
+        +md-block
+            position: absolute
+            bottom: 11%
+        +lg-block
+            position: absolute
+            bottom: 11%
+
 
 .headerFlexContainer
     +row-flex()
