--- a/src/components/banner/banner.component.pug
+++ b/src/components/banner/banner.component.pug
@@ -3,14 +3,16 @@ section.banner
         .bannerFlexContainer
             .bannerText
                 h1.page__title-h1_big POWER
-                h1
+                h1.page__title-h1
                     span More power     
                     | for your car with RSCHIP
                 p.pageText AIncrease power, save fuel, create dyno charts, Measure acceleration and more
                 .social
-                    a.icon.icon-instagram-png(href="javascript:void(0)")
-                    a.icon.icon-facebook-png(href="javascript:void(0)")
-                    a.icon.icon-youtube-png(href="javascript:void(0)")
+                    a.icon.icon-instagram(href="javascript:void(0)")
+                    a.icon.icon-facebook(href="javascript:void(0)")
+                    a.icon.icon-youtube(href="javascript:void(0)")
             .bannerImg
                 picture 
-                    +picture("imgBanner1-xs", "imgBanner1-lg", "imgBanner1", 992)
+                    source(type="image/jpeg" srcset="assets/images/png/imgBanner1-lg.png" media="(min-width: 992px)")
+                    source( type="image/png" srcset="assets/images/png/imgBanner1-md.png" media="(min-width: 768px)")
+                    img(src="assets/images/png/imgBanner1-xs.png", alt="imgBanner1-xs")
