--- a/src/sass/_allComponents.sass
+++ b/src/sass/_allComponents.sass
@@ -2,11 +2,40 @@
 .banner
     overflow: hidden
     .page__title-h1
-        margin-top: 46px
+        
         &_big
             +shift-md-right(-9)
+        margin-top: 46px
+        width: 85%
+        +sm-block
+            margin-top: 28px
+            width: 78%
+        +md-block
+            width: 100%
+        +lg-block
+            width: 100%
+            
     .pageText
         margin-top: 31px
+        padding-right: 15px
+        margin-bottom: 58px
+
+        +sm-block
+            margin-bottom: 64px
+
+    .social
+        margin-bottom: 54px
+        +sm-block
+            margin-bottom: 66px
+        +md-block
+            margin-bottom: 0
+            position: absolute
+            bottom: 83px
+        +lg-block
+            margin-bottom: 0
+            position: absolute
+            bottom: 83px
+
 
 .bannerFlexContainer
     +row-flex()
@@ -18,6 +47,12 @@
     +size-lg(2.8)
     position: relative
     padding-top: 60px
+    +sm-block
+        padding-left: 63px
+    +md-block
+        padding-left: 0
+    +lg-block
+        padding-left: 0
 .bannerImg
     // +col()
     width: 100%
@@ -376,6 +411,14 @@
     +lg-block
         background: transparent
         // padding-top: 36px
+    .social
+        +md-block
+            position: absolute
+            bottom: 11%
+        +lg-block
+            position: absolute
+            bottom: 11%
+
 
 .headerFlexContainer
     +row-flex()
