--- a/src/sass/base/base.sass
+++ b/src/sass/base/base.sass
@@ -57,7 +57,7 @@ h1
   font-weight: 800
   font-size: 48px
   line-height: 59px
-  letter-spacing: 3px
+  letter-spacing: 0.05em
   font-style: normal
   font-weight: 800
   font-size: 24px
