--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -5,6 +5,7 @@ block content
 	include ../components/header/header.component.pug
 	main.page
 		include ../components/banner/banner.component.pug
+		include ../components/products/products.component.pug
 		a(href="page/page.html").page__text page2
 	include ../components/footer/footer.component.pug
 block append style
