--- a/src/components/products/products.component.pug
+++ b/src/components/products/products.component.pug
@@ -24,5 +24,6 @@ section.products
         span.page__title-h2_small.page_purple Product
     .wrapper
         .productsFlexContainer
-            +item("Performance Tuning", "Engine tuning on your smartphone with free IOS/Android apps", "assets/images/png/product1.png", [{"number": "20%", "text": "Power"}, {"number": "20%", "text": "Torque"}],"Comaptibility : ICE and hybrids engines", "USD 249")
-            +item("Gas Pedal Tuning", "Improve your acceleration, and customize your driving dynamic", "assets/images/png/product2.png", [{"number": "10%", "text": "Faster Acceleration"}],"Comaptibility : ICE and hybrids engines", "USD 249")
+            flex-wrap: nowrap
+            +item("Performance Tuning", "Engine tuning on your smartphone with free IOS/Android apps", "assets/images/png/product1.png", [{"number": "+20%", "text": "Power"}, {"number": "+20%", "text": "Torque"}],"Comaptibility : ICE and hybrids engines", "USD 249")
+            +item("Gas Pedal Tuning", "Improve your acceleration, and customize your driving dynamic", "assets/images/png/product2.png", [{"number": "+10%", "text": "Faster Acceleration"}],"Comaptibility : ICE and hybrids engines", "USD 249")
