--- a/src/components/products/products.component.sass
+++ b/src/components/products/products.component.sass
@@ -2,14 +2,18 @@
 .products
     background: #111111
     // text-align: center
-
+    padding: 61px 0 122px
+    +sm-block
+        padding: 61px 0 122px
     +md-block
-        padding: 133px 122px
+        padding: 133px 0 122px
     +lg-block
-        padding: 133px 122px
+        padding: 133px 0 122px
 
     .page__title-h2
-
+        margin-bottom: 44px
+        +sm-block
+            margin-bottom: 62px
         +md-block
             margin-bottom: 42px
         +lg-block
@@ -21,25 +25,43 @@
 
 .productsItem
     +col()
+    +size-sm(4.5)
     +size-md(3.6)
     +size-lg(3.6)
     // width: 431px
     // height: 735px
     border: 1px solid #474747
     border-radius: 15px
+    margin-bottom: 21px
+    padding: 42px 17px 30px
+    +sm-block
+        padding: 48px 17px 30px
+        margin-bottom: 0
     +md-block
         padding: 70px 28px 46px
+        margin-bottom: 0
     +lg-block
         padding: 70px 28px 46px
+        margin-bottom: 0
 
 .productsItemTitle
     text-align: center
     font-family: #{$SFUIDisplay}-Bold
-    font-size: 30px
-    line-height: 59px
+    line-height: 136%
     letter-spacing: 0.07em
     font-style: normal
-    padding-bottom: 6px
+
+    +sm-block
+        font-size: 24px
+        padding-bottom: 21px
+    +md-block
+        font-size: 30px
+        padding-bottom: 6px
+    +lg-block
+        font-size: 30px
+        padding-bottom: 6px
+    
+  
 
 .productsItemTextBefore
     font-family: #{$SFUIText}-Regular
@@ -50,8 +72,15 @@
     text-transform: capitalize
 
     color: #B2B2B2
-    padding: 0 56px 30px
+    
     text-align: center
+    +sm-block
+        padding: 0 0 34px
+    +md-block
+        padding: 0 56px 30px
+    +lg-block
+        padding: 0 56px 30px
+
 
 .productsItemImg
     display: flex
@@ -60,8 +89,15 @@
 .productsItemGain
     display: flex
     justify-content: center
-    margin-top: -16px
+    
     padding-bottom: 48px
+    +sm-block
+        margin-top: 11px
+        padding-bottom: 27px
+    +md-block
+        margin-top: -16px
+    +lg-block
+        margin-top: -16px
     &__text
         width: 50%
 
@@ -74,13 +110,45 @@
             font-size: 15px
             line-height: 136%
         .number
-            font-size: 36px
+            font-size: 18px
             line-height: 136%
+            +sm-block   
+                font-size: 36px
+            +md-block   
+                font-size: 36px
+            +lg-block   
+                font-size: 36px
 .productsItemTextAfter
-    padding: 0 33px 29px
+    font-size: 15px
+    line-height: 176%
+
+    +sm-block
+        padding: 0 46px 29px
+        text-align: center
+    +md-block
+        padding: 0 33px 29px
+    +lg-block
+        padding: 0 33px 29px
+    
 
 .productsItemActions 
     display: flex
+    flex-wrap: wrap
+    justify-content: center
+    +md-block
+        flex-wrap: nowrap
+    +lg-block
+        flex-wrap: nowrap
     .page__btn
-        width: 50%
-        margin: 0 8px
+        margin-bottom: 20px
+        width: 100%
+        +sm-block
+            margin-bottom: 20px
+            width: 55%
+        +md-block
+            width: 50%
+            margin: 0 8px
+            
+        +lg-block
+            width: 50%
+            margin: 0 8px
