--- a/src/components/products/products.component.pug
+++ b/src/components/products/products.component.pug
@@ -21,7 +21,7 @@ mixin item(titelH3, textBefore, imgSrc, productsItemGains, textAfter, textBtn1)
 
 section.products 
     h2.page__title-h2.page__title-h2_big shop 
-        span.page__title-h2_small.page_purple Product
+        span.page__title-h2_small.page__title-h2_absolute Product
     .wrapper
         .productsFlexContainer
             flex-wrap: nowrap
