--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -6,6 +6,7 @@ block content
 	main.page
 		include ../components/banner/banner.component.pug
 		include ../components/products/products.component.pug
+		include ../components/faq/faq.component.pug
 		a(href="page/page.html").page__text page2
 	include ../components/footer/footer.component.pug
 block append style
@@ -13,3 +14,4 @@ block append style
 block append script
 	script(src="/js/debuggrid/debuggrid.component.js")
 	script(src="/js/header/header.component.js")
+	script(src="/js/faq/faq.component.js")
