--- a/src/sass/blocks/page.sass
+++ b/src/sass/blocks/page.sass
@@ -32,32 +32,34 @@
             &_big
                 font-family: #{$SFUIDisplay}-Bold
                 font-size: 64px
-                
                 line-height: 100%
-                text-transform: uppercase
                 color: rgba(255, 255, 255, 0.04)
+                text-transform: uppercase
+                
                 +sm-block
                     font-size: 96px
                 +md-block
                     font-size: 96px
                 +lg-block
                     font-size: 96px
+
             &_small
                 font-family: #{$SFUIText}-Regular
+                color: transparent
                 font-style: normal
-                font-weight: normal
+                font-weight: bold
+                text-transform: capitalize
+                
                 font-size: 15px
                 line-height: 100%
                 background-image: linear-gradient(to right, #FF4587 , #FF5438)
                 background-clip: text
-                color: transparent
-
+                
+            &_absolute
                 position: absolute
                 top: 50%
                 left: 50%
                 transform: translate(-50%, -50%)
-                text-transform: capitalize
-                font-weight: bold
 
         &-h3
             font-family: #{$SFUIDisplay}-Bold
@@ -65,6 +67,7 @@
             line-height: 59px
             letter-spacing: 0.07em
             font-style: normal
+            
         &-h4
             font-size: 24px
         &-h5
