--- a/src/sass/sprite/webp/spriteWEBP.sass
+++ b/src/sass/sprite/webp/spriteWEBP.sass
@@ -30,6 +30,17 @@ $icon-tw-webp-total-width: 270px
 $icon-tw-webp-total-height: 239px
 $icon-tw-webp-image: '../assets/icons/webp/spriteWEBP.webp'
 $icon-tw-webp: (212px, 40px, -212px, -40px, 40px, 40px, 270px, 239px, '../assets/icons/webp/spriteWEBP.webp', 'icon-tw-webp', )
+$icon-arrow-white-details-webp-name: 'iconArrowWhiteDetails-webp'
+$icon-arrow-white-details-webp-x: 252px
+$icon-arrow-white-details-webp-y: 35px
+$icon-arrow-white-details-webp-offset-x: -252px
+$icon-arrow-white-details-webp-offset-y: -35px
+$icon-arrow-white-details-webp-width: 11px
+$icon-arrow-white-details-webp-height: 8px
+$icon-arrow-white-details-webp-total-width: 270px
+$icon-arrow-white-details-webp-total-height: 239px
+$icon-arrow-white-details-webp-image: '../assets/icons/webp/spriteWEBP.webp'
+$icon-arrow-white-details-webp: (252px, 35px, -252px, -35px, 11px, 8px, 270px, 239px, '../assets/icons/webp/spriteWEBP.webp', 'iconArrowWhiteDetails-webp', )
 $icon-cart-webp-name: 'iconCart-webp'
 $icon-cart-webp-x: 0px
 $icon-cart-webp-y: 212px
@@ -165,7 +176,7 @@ $icon-youtube-webp: (88px, 212px, -88px, -212px, 22px, 16px, 270px, 239px, '../a
 $spritesheet-width: 270px
 $spritesheet-height: 239px
 $spritesheet-image: '../assets/icons/webp/spriteWEBP.webp'
-$spritesheet-sprites: ($icon-fb-webp, $icon-tw-webp, $icon-cart-webp, $icon-chat-webp, $icon-facebook-webp, $icon-free-webp, $icon-info-webp, $icon-instagram-webp, $icon-lifetime-webp, $icon-location-webp, $icon-mail-webp, $icon-phone-webp, $icon-return-webp, $icon-youtube-webp, )
+$spritesheet-sprites: ($icon-fb-webp, $icon-tw-webp, $icon-arrow-white-details-webp, $icon-cart-webp, $icon-chat-webp, $icon-facebook-webp, $icon-free-webp, $icon-info-webp, $icon-instagram-webp, $icon-lifetime-webp, $icon-location-webp, $icon-mail-webp, $icon-phone-webp, $icon-return-webp, $icon-youtube-webp, )
 $spritesheet: (270px, 239px, '../assets/icons/webp/spriteWEBP.webp', $spritesheet-sprites, )
 
 // The provided mixins are intended to be used with the array-like variables
