--- a/src/sass/styles-sprites.sass
+++ b/src/sass/styles-sprites.sass
@@ -30,3 +30,6 @@
     +sprite($icon-return-png)
 .icon-free-png
     +sprite($icon-free-png)
+.icon-arrow-white-details
+    +sprite($icon-arrow-white-details-png)
+    min-width: 11px
