--- a/src/components/faq/faq.component.sass
+++ b/src/components/faq/faq.component.sass
@@ -1,28 +1,81 @@
 /*faq*/
 .faq
+    padding: 86px 0 106px
+    +sm-block
+        padding: 135px 0 115px
+    +md-block
+        padding: 94px 0 120px
+    +lg-block
+        padding: 94px 0 120px
     .page__title-h2_small
         text-align: center
     .page__title-h3
         text-align: center
+        font-weight: 800
+        font-size: 24px
+        line-height: 125%
+        
+        width: 75%
+        margin: 9px auto 53px
+        +sm-block
+            font-size: 36px
+            margin-bottom: 32px
+            line-height: 164%
+        +md-block
+            width: 44%  
+            font-size: 36px
+            line-height: 164%
+            margin-bottom: 54px
+        +lg-block
+            width: 44%
+            font-size: 36px
+            line-height: 164%
+            margin-bottom: 54px
+       
+        span
+            color: #FF4C62
 
 .faqFlexContainer 
     +row-flex
-
-.faqItem
+.faqCol
     +col
     +size(9)
     +size-md(4.5)
     +size-lg(4.5)
+.faqItem
+    margin-bottom: 16px
+
 .faqItemDetails 
+    cursor: pointer
     &__Summary
         font-family: #{$SFUIText}-Regular
         border-bottom: 1px solid #fff
         font-size: 18px
-        letter-spacing: 0.02em 
-        padding-bottom: 15px
+        line-height: 133%
+        letter-spacing: 0.05em 
+       
         color: #fff
+        font-weight: bold
+
+        display: flex
+        justify-content: space-between
+        margin-bottom: 16px
+        padding-top: 23px
+        padding-bottom: 15px
+        .icon-arrow-white-details
+            margin-top: 8px
+            margin-right: 12px
+    
     &__Content
         display: none
+        font-size: 15px
+        line-height: 26px
+
+        /* or 173% */
+        letter-spacing: 0.025em
+
+        color: #B2B2B2
+        padding-top: 34px
     &.active
         
         .faqItemDetails__Summary
@@ -31,3 +84,5 @@
             background-clip: text
         .faqItemDetails__Content
             display: block
+        .icon-arrow-white-details
+            transform: rotate(180deg)
