--- a/src/sass/sprite/png/spritePNG.sass
+++ b/src/sass/sprite/png/spritePNG.sass
@@ -30,6 +30,17 @@ $icon-tw-png-total-width: 270px
 $icon-tw-png-total-height: 239px
 $icon-tw-png-image: '../assets/icons/png/spritePNG.png'
 $icon-tw-png: (212px, 40px, -212px, -40px, 40px, 40px, 270px, 239px, '../assets/icons/png/spritePNG.png', 'icon-tw-png', )
+$icon-arrow-white-details-png-name: 'iconArrowWhiteDetails-png'
+$icon-arrow-white-details-png-x: 252px
+$icon-arrow-white-details-png-y: 35px
+$icon-arrow-white-details-png-offset-x: -252px
+$icon-arrow-white-details-png-offset-y: -35px
+$icon-arrow-white-details-png-width: 11px
+$icon-arrow-white-details-png-height: 8px
+$icon-arrow-white-details-png-total-width: 270px
+$icon-arrow-white-details-png-total-height: 239px
+$icon-arrow-white-details-png-image: '../assets/icons/png/spritePNG.png'
+$icon-arrow-white-details-png: (252px, 35px, -252px, -35px, 11px, 8px, 270px, 239px, '../assets/icons/png/spritePNG.png', 'iconArrowWhiteDetails-png', )
 $icon-cart-png-name: 'iconCart-png'
 $icon-cart-png-x: 0px
 $icon-cart-png-y: 212px
@@ -165,7 +176,7 @@ $icon-youtube-png: (88px, 212px, -88px, -212px, 22px, 16px, 270px, 239px, '../as
 $spritesheet-width: 270px
 $spritesheet-height: 239px
 $spritesheet-image: '../assets/icons/png/spritePNG.png'
-$spritesheet-sprites: ($icon-fb-png, $icon-tw-png, $icon-cart-png, $icon-chat-png, $icon-facebook-png, $icon-free-png, $icon-info-png, $icon-instagram-png, $icon-lifetime-png, $icon-location-png, $icon-mail-png, $icon-phone-png, $icon-return-png, $icon-youtube-png, )
+$spritesheet-sprites: ($icon-fb-png, $icon-tw-png, $icon-arrow-white-details-png, $icon-cart-png, $icon-chat-png, $icon-facebook-png, $icon-free-png, $icon-info-png, $icon-instagram-png, $icon-lifetime-png, $icon-location-png, $icon-mail-png, $icon-phone-png, $icon-return-png, $icon-youtube-png, )
 $spritesheet: (270px, 239px, '../assets/icons/png/spritePNG.png', $spritesheet-sprites, )
 
 // The provided mixins are intended to be used with the array-like variables
