--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -7,6 +7,7 @@ block content
 		include ../components/banner/banner.component.pug
 		include ../components/products/products.component.pug
 		include ../components/faq/faq.component.pug
+		include ../components/news/news.component.pug
 		a(href="page/page.html").page__text page2
 	include ../components/footer/footer.component.pug
 block append style
