--- a/src/sass/_allComponents.sass
+++ b/src/sass/_allComponents.sass
@@ -609,6 +609,80 @@
         background: #fff
         margin-bottom: 8px
     
+/*news*/
+.news 
+    background: #111111
+    padding: 67px 0 0
+    +sm-block
+        padding: 104px 0 100px
+    +md-block
+        padding: 104px 0 100px
+    +lg-block
+        padding: 104px 0 100px
+
+    .page__title-h2_small
+        text-align: center
+    .page__title-h3
+        text-align: center
+        font-weight: 800
+        font-size: 24px
+        line-height: 125%
+        
+        width: 75%
+        margin: 9px auto 50px
+        +sm-block
+            font-size: 36px
+            line-height: 164%
+        +md-block
+            width: 44%  
+            font-size: 36px
+            line-height: 164%
+        +lg-block
+            width: 44%
+            font-size: 36px
+            line-height: 164%
+
+.newsFlexContainer 
+    +row-flex
+
+.newsItem
+    +col
+    +size(7.5)
+    +size-sm(4.5)
+    +size-md(3)
+    +size-lg(3)
+    cursor: pointer
+    margin: 0 auto 50px
+    &:hover
+        .newsItemImg
+            img
+            // border-bottom: 2px solid transparent
+            // border-image-slice: 1
+            // border-image: linear-gradient(to right, #700ED2 , #FF3838)
+    &:last-child
+        display: none
+        +md-block
+            display: block
+        +lg-block
+            display: block
+        
+
+.newsItemImg
+    display: flex
+    border-bottom: 2px solid transparent
+    border-image: linear-gradient(to right, #700ED2 , #FF3838)
+    border-image-slice: 1
+    margin-bottom: 26px
+    &:hover
+        border-image: linear-gradient(to right, #700ED2 , #FF3838)
+    // img
+        //    box-shadow: 15px -16px 0px linear-gradient(to right, #700ED2 , #FF3838)
+
+.newsItemTitle
+    font-weight: bold
+    font-size: 18px
+    line-height: 178%
+    letter-spacing: 0.06em
 /*products*/
 .products
     background: #111111
