--- a/src/components/banner/banner.component.pug
+++ b/src/components/banner/banner.component.pug
@@ -7,10 +7,7 @@ section.banner
                     span More power     
                     | for your car with RSCHIP
                 p.pageText AIncrease power, save fuel, create dyno charts, Measure acceleration and more
-                .social
-                    a.icon.icon-instagram(href="javascript:void(0)")
-                    a.icon.icon-facebook(href="javascript:void(0)")
-                    a.icon.icon-youtube(href="javascript:void(0)")
+                include ../socialIcons/socialIcons.component.pug
             .bannerImg
                 picture 
                     source(type="image/jpeg" srcset="assets/images/png/imgBanner1-lg.png" media="(min-width: 992px)")
