--- a/src/components/banner/banner.component.sass
+++ b/src/components/banner/banner.component.sass
@@ -23,7 +23,7 @@
         +sm-block
             margin-bottom: 64px
 
-    .social
+    .socialIcons
         margin-bottom: 54px
         +sm-block
             margin-bottom: 66px
