--- a/src/components/footer/footer.component.pug
+++ b/src/components/footer/footer.component.pug
@@ -164,10 +164,8 @@ footer.footer
         .footerPrivacy
             div.item1
                 p © Copyright 2016 - 2021 RSCHIP. All Rights Reserved.
-            div.item2.social
-                .icon.icon-instagram
-                .icon.icon-facebook
-                .icon.icon-youtube
+            div.item2
+                include ../socialIcons/socialIcons.component.pug
             div.item3 
                 a(href="javascript:void(0)") Privacy PolicyApp 
                 a(href="javascript:void(0)") Privacy Policy
