--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -9,11 +9,11 @@ block content
 		include ../components/faq/faq.component.pug
 		include ../components/news/news.component.pug
 		include ../components/social/social.component.pug
+		include ../components/gallary/gallary.component.pug
 		a(href="page/page.html").page__text page2
 	include ../components/footer/footer.component.pug
 block append style
 	
 block append script
 	script(src="/js/debuggrid/debuggrid.component.js")
-	script(src="/js/header/header.component.js")
 	script(src="/js/faq/faq.component.js")
