--- a/src/components/gallary/gallary.component.sass
+++ b/src/components/gallary/gallary.component.sass
@@ -15,28 +15,83 @@
 .gallaryCol
     +col
     +size(4.5)
+    +size-sm(3)
     +size-md(3)
     +size-lg(3)
-    &:nth-child(1)
-        .gallaryItem
-            &:nth-of-type(2)
-                height: 290px
     &:nth-child(2)
         .gallaryItem
             &:nth-of-type(1)
-                height: 290px
-    &:nth-child(3)
-        .gallaryItem
-            &:nth-of-type(1)
-                height: 339px
+                height: 110px
+                +sm-block
+                    height: 180px
+                +md-block
+                    height: 290px
+                +lg-block
+                    height: 290px
             &:nth-of-type(2)
-                height: 359px
+                height: 155px
+                +sm-block
+                    height: 253px
+                +md-block
+                    height: 407px
+                +lg-block
+                    height: 407px
+    &:nth-child(3)
+        +size(9)
+        +size-sm(3)
+        +size-md(3)
+        +size-lg(3)
+        display: flex
+        justify-content: space-between
+        +sm-block
+            flex-direction: column
+        .gallaryItem
+            width: calc(50% - 10px)
+            +sm-block
+                width: 100%
+            +md-block
+                width: 100%
+            +lg-block
+                width: 100%
+            &:nth-of-type(1)
+                height: 134px
+                +sm-block
+                    height: 211px
+                +md-block
+                    height: 339px
+                +lg-block
+                    height: 339px
+            &:nth-of-type(2)
+                height: 134px
+                +sm-block
+                    height: 223px
+                +md-block
+                    height: 359px
+                +lg-block
+                    height: 359px
         
 .gallaryItem
-    
-    margin-bottom: 49px
     display: flex
-    height: 407px
+    height: 155px
+    margin-bottom: 19px
+    +sm-block
+        height: 253px
+        margin-bottom: 29px
+    +md-block
+        height: 407px
+        margin-bottom: 49px
+    +lg-block
+        height: 407px
+        margin-bottom: 49px
+
+    &:nth-of-type(2)
+        height: 110px
+        +sm-block
+            height: 180px
+        +md-block
+            height: 290px
+        +lg-block
+            height: 290px
     picture
         display: flex
         width: 100%
