--- a/src/pug/templates/template.pug
+++ b/src/pug/templates/template.pug
@@ -51,3 +51,5 @@ html(lang="en")
            
         block script
             script(src="js/main.js")
+            script(src="libs/js/store-scroll.js")
+            script(src="libs/js/modal.js")
