--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -12,8 +12,10 @@ block content
 		include ../components/gallary/gallary.component.pug
 		a(href="page/page.html").page__text page2
 	include ../components/footer/footer.component.pug
+	include ../components/modal/modal.component.pug
 block append style
 	
 block append script
 	script(src="/js/debuggrid/debuggrid.component.js")
 	script(src="/js/faq/faq.component.js")
+	script(src="/js/modal/modal.component.js")
