--- a/src/components/gallary/gallary.component.pug
+++ b/src/components/gallary/gallary.component.pug
@@ -1,6 +1,6 @@
 //-gallary
 mixin item(imgSrc)
-    .gallaryItem.js-open-modal(data-modal="modal1")
+    .gallaryItem.js-open-modal(data-modal="modalGallary")
         picture 
             img(src=imgSrc, alt="imgGallary")
 section.gallary
