--- a/src/components/news/news.component.pug
+++ b/src/components/news/news.component.pug
@@ -1,6 +1,6 @@
 //-news
 mixin item(imgSrc, title)
-    .newsItem.js-open-modal(data-modal="modal1")
+    .newsItem.js-open-modal(data-modal="modalNews")
         .newsItemImg
             img(src=imgSrc, alt="imgNews")
         h4.newsItemTitle=title
