--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -12,7 +12,9 @@ block content
 		include ../components/gallary/gallary.component.pug
 		a(href="page/page.html").page__text page2
 	include ../components/footer/footer.component.pug
-	include ../components/modal/modal.component.pug
+	include ../components/modals/modalsMainPage.component.pug
+	//- for modals
+	.overlay.js-overlay-modal
 block append style
 	
 block append script
