--- a/src/sass/_allComponents.sass
+++ b/src/sass/_allComponents.sass
@@ -709,6 +709,7 @@
         background: #fff
         margin-bottom: 8px
     
+/*menu*/
 /*modal*/
 .overlay
     opacity: 0
@@ -736,7 +737,7 @@
     max-height: 568px
     width: 100%
     height: 100%
-
+    color: #000
     background: #FFFFFF
     border-radius: 15px
 
