--- a/src/components/footer/footer.component.pug
+++ b/src/components/footer/footer.component.pug
@@ -159,7 +159,7 @@ footer.footer
                 a(href="javascript:void(0)") Wey 
                 a(href="javascript:void(0)") XCMG 
                 a(href="javascript:void(0)") Zotye
-.privacy
+section.privacy
     .wrapper
         .footerPrivacy
             div.item1
