--- a/src/components/modals/modalGallary.component.pug
+++ b/src/components/modals/modalGallary.component.pug
@@ -1,4 +1,3 @@
 //-modalGallary
 +modal("modalGallary", "modalGallary")
-    h3.modalTitle modalGallary
-    
+    img(src="assets/images/png/imgGallaryPopup1.png", alt="imgGallaryPopup")
