--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -16,8 +16,10 @@ block content
 	//- for modals
 	.overlay.js-overlay-modal
 block append style
+	link(rel="stylesheet", href="libs/css/swiper-bundle.min.css", type="text/css")
+            
 	
 block append script
 	script(src="/js/debuggrid/debuggrid.component.js")
 	script(src="/js/faq/faq.component.js")
-	script(src="/js/modal/modal.component.js")
+	script(src="libs/js/swiper-bundle.min.js")
