--- a/src/pug/modules/header-module.pug
+++ b/src/pug/modules/header-module.pug
@@ -1,2 +1,4 @@
+
 include ../../components/debuggrid/debuggrid.component.pug
 include ../../components/header/header.component.pug
+include ../../components/menu/menu.component.pug
