--- a/src/sass/_allComponents.sass
+++ b/src/sass/_allComponents.sass
@@ -588,6 +588,12 @@
         object-fit: cover
         width: 100%
 /*header*/
+html 
+  &:not([data-scroll='0']) 
+    header 
+      background: rgba(2, 2, 2, 0.4)
+      box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.1)
+    
 .header
     position: sticky
     top: 0
@@ -710,6 +716,7 @@
         margin-bottom: 8px
     
 /*menu*/
+.menu
 /*modal*/
 .overlay
     opacity: 0
