--- a/src/components/header/header.component.sass
+++ b/src/components/header/header.component.sass
@@ -1,4 +1,10 @@
 /*header*/
+html 
+  &:not([data-scroll='0']) 
+    header 
+      background: rgba(2, 2, 2, 0.4)
+      box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.1)
+    
 .header
     position: sticky
     top: 0
