--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -1,8 +1,6 @@
 extends ../pug/templates/template
 block append style
 block content
-	include ../components/debuggrid/debuggrid.component.pug
-	include ../components/header/header.component.pug
 	main.page
 		include ../components/banner/banner.component.pug
 		include ../components/products/products.component.pug
@@ -10,16 +8,13 @@ block content
 		include ../components/news/news.component.pug
 		include ../components/social/social.component.pug
 		include ../components/gallary/gallary.component.pug
-		a(href="page/page.html").page__text page2
-	include ../components/footer/footer.component.pug
+block modals
 	include ../components/modals/modalsMainPage.component.pug
-	//- for modals
-	.overlay.js-overlay-modal
+	
 block append style
 	link(rel="stylesheet", href="libs/css/swiper-bundle.min.css", type="text/css")
             
 	
 block append script
-	script(src="/js/debuggrid/debuggrid.component.js")
 	script(src="/js/faq/faq.component.js")
 	script(src="libs/js/swiper-bundle.min.js")
