--- a/src/pages/page/page.pug
+++ b/src/pages/page/page.pug
@@ -1,16 +1,22 @@
 extends ../../pug/templates/template
+
 block base
 	base(href="../")
+
 block title
 	title Title Pages
+
 block append style
+
 block content
-	include ../../pug/modules/header-module
-	section.banner
+	main.page.name-page 
+		section.banner
 		.wrapper
 			h1.page__title-h1 Page 2
 			a(href="../").page__text index
-block append style
 
+block modals
+	
+block append style
 
 block append script
