--- a/src/components/header/header.component.pug
+++ b/src/components/header/header.component.pug
@@ -20,3 +20,5 @@ header.header
                     .line
                     .line
                     .line
+    
+    include ../menu/menu.component.pug
