--- a/src/components/footer/footer.component.pug
+++ b/src/components/footer/footer.component.pug
@@ -1,172 +1,173 @@
-footer.footer
-    .wrapper 
-        .footerFlexContainer
-            .footerLogo
-                img(src="assets/images/png/logo.png", alt="logo")
-            .footerDealer
-                a.page__btn(href="javascript:void(0)") Become a dealer
-            .footerContacts 
-                .footerContactsItem
-                    i.icon.icon-phone-png
-                    a(href="tel:+1 800 796 16 17").phone +1 800 796 16 17
-                .footerContactsItem
-                    i.icon.icon-mail-png 
-                    a(href="mailto:rschiphelp@gmail.com").email rschiphelp@gmail.com
-                .footerContactsItem
-                    i.icon.icon-location-png 
-                    address 1201 East 5th Street North Little Rock, Arkansas USA, 72114
-        .footerFlexContainer.footerAdvantages
-            .footerAdvantagesItem
-                .footerAdvantagesItem__title
-                    i.icon.icon-lifetime-png
-                    h5 Lifetime warranty
-                p.page__text We are confident in longevity and reliability of our products, and happy to provide you with best possible terms and guarantees!
-                a(href="javascript:void(0)") Read more 
-            .footerAdvantagesItem
-                .footerAdvantagesItem__title
-                    i.icon.icon-return-png
-                    h5 30 days return policy
-                p.page__text Not convinced after the 30 days? Just send the produt back No questions asked.
-                a(href="javascript:void(0)") Read more 
-            .footerAdvantagesItem
-                .footerAdvantagesItem__title
-                    i.icon.icon-free-png
-                    h5 Free shipping worldwide
-                p.page__text Free shipping worldwide to any location with DHL express and USPS.
-                a(href="javascript:void(0)") Read more 
+footer
+    .footer
+        .wrapper 
+            .footerFlexContainer
+                .footerLogo
+                    img(src="assets/images/png/logo.png", alt="logo")
+                .footerDealer
+                    a.page__btn(href="javascript:void(0)") Become a dealer
+                .footerContacts 
+                    .footerContactsItem
+                        i.icon.icon-phone-png
+                        a(href="tel:+1 800 796 16 17").phone +1 800 796 16 17
+                    .footerContactsItem
+                        i.icon.icon-mail-png 
+                        a(href="mailto:rschiphelp@gmail.com").email rschiphelp@gmail.com
+                    .footerContactsItem
+                        i.icon.icon-location-png 
+                        address 1201 East 5th Street North Little Rock, Arkansas USA, 72114
+            .footerFlexContainer.footerAdvantages
+                .footerAdvantagesItem
+                    .footerAdvantagesItem__title
+                        i.icon.icon-lifetime-png
+                        h5 Lifetime warranty
+                    p.page__text We are confident in longevity and reliability of our products, and happy to provide you with best possible terms and guarantees!
+                    a(href="javascript:void(0)") Read more 
+                .footerAdvantagesItem
+                    .footerAdvantagesItem__title
+                        i.icon.icon-return-png
+                        h5 30 days return policy
+                    p.page__text Not convinced after the 30 days? Just send the produt back No questions asked.
+                    a(href="javascript:void(0)") Read more 
+                .footerAdvantagesItem
+                    .footerAdvantagesItem__title
+                        i.icon.icon-free-png
+                        h5 Free shipping worldwide
+                    p.page__text Free shipping worldwide to any location with DHL express and USPS.
+                    a(href="javascript:void(0)") Read more 
 
-        .footerFlexContainer.footerLinks
-            h4 Tuning 
-            hr
-            .footerLinksItem
-                a(href="javascript:void(0)") Acura 
-                a(href="javascript:void(0)") Alfa Romeo 
-                a(href="javascript:void(0)") Alpina 
-                a(href="javascript:void(0)") Aston Martin
-                a(href="javascript:void(0)") Audi 
-                a(href="javascript:void(0)") Baojun 
-                a(href="javascript:void(0)") Beiben 
-                a(href="javascript:void(0)") Beijing 
-                a(href="javascript:void(0)") Bentley 
-                a(href="javascript:void(0)") BMW 
-                a(href="javascript:void(0)") Borgward 
-                a(href="javascript:void(0)") Buick 
-                a(href="javascript:void(0)") BYD 
-            .footerLinksItem
-                a(href="javascript:void(0)") Cadillac 
-                a(href="javascript:void(0)") Changan 
-                a(href="javascript:void(0)") Changfeng 
-                a(href="javascript:void(0)") Chery 
-                a(href="javascript:void(0)") Chevrolet 
-                a(href="javascript:void(0)") Chrysler 
-                a(href="javascript:void(0)") Chrysler 
-                a(href="javascript:void(0)") Citroen 
-                a(href="javascript:void(0)") Cupra 
-                a(href="javascript:void(0)") Dacia 
-                a(href="javascript:void(0)") Daewoo 
-                a(href="javascript:void(0)") Daihatsu 
-                a(href="javascript:void(0)") DFSK 
-            .footerLinksItem
-                a(href="javascript:void(0)") Dodge 
-                a(href="javascript:void(0)") Dongfeng 
-                a(href="javascript:void(0)") FAW 
-                a(href="javascript:void(0)") Ferrari 
-                a(href="javascript:void(0)") Fiat 
-                a(href="javascript:void(0)") Ford 
-                a(href="javascript:void(0)") Foton 
-                a(href="javascript:void(0)") GAC 
-                a(href="javascript:void(0)") Geely 
-                a(href="javascript:void(0)") GMC 
-                a(href="javascript:void(0)") GMW 
-                a(href="javascript:void(0)") Great Wall
-                a(href="javascript:void(0)") Guangqi 
-            .footerLinksItem
-                a(href="javascript:void(0)") Haval 
-                a(href="javascript:void(0)") Hino 
-                a(href="javascript:void(0)") Holden 
-                a(href="javascript:void(0)") Honda 
-                a(href="javascript:void(0)") Hummer 
-                a(href="javascript:void(0)") Hyundai 
-                a(href="javascript:void(0)") Infiniti 
-                a(href="javascript:void(0)") Isuzu 
-                a(href="javascript:void(0)") Iveco 
-                a(href="javascript:void(0)") Jac 
-                a(href="javascript:void(0)") Jaguar 
-                a(href="javascript:void(0)") Jeep 
-                a(href="javascript:void(0)") KIA
-            .footerLinksItem 
-                a(href="javascript:void(0)") Kowloon 
-                a(href="javascript:void(0)") KTM 
-                a(href="javascript:void(0)") Lada 
-                a(href="javascript:void(0)") Lamborghini 
-                a(href="javascript:void(0)") Lancia 
-                a(href="javascript:void(0)") Land Rover
-                a(href="javascript:void(0)") Landwind 
-                a(href="javascript:void(0)") Lexus 
-                a(href="javascript:void(0)") Lifan 
-                a(href="javascript:void(0)") Lincoln 
-                a(href="javascript:void(0)") Lotus 
-                a(href="javascript:void(0)") Luxgen 
-                a(href="javascript:void(0)") Lynk 
-            .footerLinksItem
-                a(href="javascript:void(0)") Mahindra 
-                a(href="javascript:void(0)") Maruti 
-                a(href="javascript:void(0)") Maserati 
-                a(href="javascript:void(0)") Maybach 
-                a(href="javascript:void(0)") Mazda 
-                a(href="javascript:void(0)") McLaren 
-                a(href="javascript:void(0)") Mercedes 
-                a(href="javascript:void(0)") MG 
-                a(href="javascript:void(0)") Mini 
-                a(href="javascript:void(0)") Mitsubishi 
-                a(href="javascript:void(0)") Nissan 
-                a(href="javascript:void(0)") Opel 
-                a(href="javascript:void(0)") Pagani 
-            .footerLinksItem
-                a(href="javascript:void(0)") Pontiac 
-                a(href="javascript:void(0)") Porsche 
-                a(href="javascript:void(0)") Proton 
-                a(href="javascript:void(0)") Qoros 
-                a(href="javascript:void(0)") Renault 
-                a(href="javascript:void(0)") Roewe 
-                a(href="javascript:void(0)") Rolls-Royce 
-                a(href="javascript:void(0)") Rover 
-                a(href="javascript:void(0)") Saab 
-                a(href="javascript:void(0)") Sag 
-                a(href="javascript:void(0)") SAIC 
-                a(href="javascript:void(0)") Sany 
-                a(href="javascript:void(0)") Saturn 
-            .footerLinksItem
-                a(href="javascript:void(0)") Scion 
-                a(href="javascript:void(0)") Seat 
-                a(href="javascript:void(0)") Sino Truck
-                a(href="javascript:void(0)") Skoda 
-                a(href="javascript:void(0)") Smart 
-                a(href="javascript:void(0)") Soueast 
-                a(href="javascript:void(0)") SsangYong 
-                a(href="javascript:void(0)") Subaru 
-                a(href="javascript:void(0)") Suzuki 
-                a(href="javascript:void(0)") TATA 
-                a(href="javascript:void(0)") Toyota 
-                a(href="javascript:void(0)") Troller 
-                a(href="javascript:void(0)") UAZ 
-            .footerLinksItem
-                a(href="javascript:void(0)") Vauxhall 
-                a(href="javascript:void(0)") Vinfast 
-                a(href="javascript:void(0)") Volvo 
-                a(href="javascript:void(0)") Vortex 
-                a(href="javascript:void(0)") VW 
-                a(href="javascript:void(0)") Wey 
-                a(href="javascript:void(0)") XCMG 
-                a(href="javascript:void(0)") Zotye
-section.privacy
-    .wrapper
-        .footerPrivacy
-            div.item1
-                p © Copyright 2016 - 2021 RSCHIP. All Rights Reserved.
-            div.item2
-                include ../socialIcons/socialIcons.component.pug
-            div.item3 
-                a(href="javascript:void(0)") Privacy PolicyApp 
-                a(href="javascript:void(0)") Privacy Policy
+            .footerFlexContainer.footerLinks
+                h4 Tuning 
+                hr
+                .footerLinksItem
+                    a(href="javascript:void(0)") Acura 
+                    a(href="javascript:void(0)") Alfa Romeo 
+                    a(href="javascript:void(0)") Alpina 
+                    a(href="javascript:void(0)") Aston Martin
+                    a(href="javascript:void(0)") Audi 
+                    a(href="javascript:void(0)") Baojun 
+                    a(href="javascript:void(0)") Beiben 
+                    a(href="javascript:void(0)") Beijing 
+                    a(href="javascript:void(0)") Bentley 
+                    a(href="javascript:void(0)") BMW 
+                    a(href="javascript:void(0)") Borgward 
+                    a(href="javascript:void(0)") Buick 
+                    a(href="javascript:void(0)") BYD 
+                .footerLinksItem
+                    a(href="javascript:void(0)") Cadillac 
+                    a(href="javascript:void(0)") Changan 
+                    a(href="javascript:void(0)") Changfeng 
+                    a(href="javascript:void(0)") Chery 
+                    a(href="javascript:void(0)") Chevrolet 
+                    a(href="javascript:void(0)") Chrysler 
+                    a(href="javascript:void(0)") Chrysler 
+                    a(href="javascript:void(0)") Citroen 
+                    a(href="javascript:void(0)") Cupra 
+                    a(href="javascript:void(0)") Dacia 
+                    a(href="javascript:void(0)") Daewoo 
+                    a(href="javascript:void(0)") Daihatsu 
+                    a(href="javascript:void(0)") DFSK 
+                .footerLinksItem
+                    a(href="javascript:void(0)") Dodge 
+                    a(href="javascript:void(0)") Dongfeng 
+                    a(href="javascript:void(0)") FAW 
+                    a(href="javascript:void(0)") Ferrari 
+                    a(href="javascript:void(0)") Fiat 
+                    a(href="javascript:void(0)") Ford 
+                    a(href="javascript:void(0)") Foton 
+                    a(href="javascript:void(0)") GAC 
+                    a(href="javascript:void(0)") Geely 
+                    a(href="javascript:void(0)") GMC 
+                    a(href="javascript:void(0)") GMW 
+                    a(href="javascript:void(0)") Great Wall
+                    a(href="javascript:void(0)") Guangqi 
+                .footerLinksItem
+                    a(href="javascript:void(0)") Haval 
+                    a(href="javascript:void(0)") Hino 
+                    a(href="javascript:void(0)") Holden 
+                    a(href="javascript:void(0)") Honda 
+                    a(href="javascript:void(0)") Hummer 
+                    a(href="javascript:void(0)") Hyundai 
+                    a(href="javascript:void(0)") Infiniti 
+                    a(href="javascript:void(0)") Isuzu 
+                    a(href="javascript:void(0)") Iveco 
+                    a(href="javascript:void(0)") Jac 
+                    a(href="javascript:void(0)") Jaguar 
+                    a(href="javascript:void(0)") Jeep 
+                    a(href="javascript:void(0)") KIA
+                .footerLinksItem 
+                    a(href="javascript:void(0)") Kowloon 
+                    a(href="javascript:void(0)") KTM 
+                    a(href="javascript:void(0)") Lada 
+                    a(href="javascript:void(0)") Lamborghini 
+                    a(href="javascript:void(0)") Lancia 
+                    a(href="javascript:void(0)") Land Rover
+                    a(href="javascript:void(0)") Landwind 
+                    a(href="javascript:void(0)") Lexus 
+                    a(href="javascript:void(0)") Lifan 
+                    a(href="javascript:void(0)") Lincoln 
+                    a(href="javascript:void(0)") Lotus 
+                    a(href="javascript:void(0)") Luxgen 
+                    a(href="javascript:void(0)") Lynk 
+                .footerLinksItem
+                    a(href="javascript:void(0)") Mahindra 
+                    a(href="javascript:void(0)") Maruti 
+                    a(href="javascript:void(0)") Maserati 
+                    a(href="javascript:void(0)") Maybach 
+                    a(href="javascript:void(0)") Mazda 
+                    a(href="javascript:void(0)") McLaren 
+                    a(href="javascript:void(0)") Mercedes 
+                    a(href="javascript:void(0)") MG 
+                    a(href="javascript:void(0)") Mini 
+                    a(href="javascript:void(0)") Mitsubishi 
+                    a(href="javascript:void(0)") Nissan 
+                    a(href="javascript:void(0)") Opel 
+                    a(href="javascript:void(0)") Pagani 
+                .footerLinksItem
+                    a(href="javascript:void(0)") Pontiac 
+                    a(href="javascript:void(0)") Porsche 
+                    a(href="javascript:void(0)") Proton 
+                    a(href="javascript:void(0)") Qoros 
+                    a(href="javascript:void(0)") Renault 
+                    a(href="javascript:void(0)") Roewe 
+                    a(href="javascript:void(0)") Rolls-Royce 
+                    a(href="javascript:void(0)") Rover 
+                    a(href="javascript:void(0)") Saab 
+                    a(href="javascript:void(0)") Sag 
+                    a(href="javascript:void(0)") SAIC 
+                    a(href="javascript:void(0)") Sany 
+                    a(href="javascript:void(0)") Saturn 
+                .footerLinksItem
+                    a(href="javascript:void(0)") Scion 
+                    a(href="javascript:void(0)") Seat 
+                    a(href="javascript:void(0)") Sino Truck
+                    a(href="javascript:void(0)") Skoda 
+                    a(href="javascript:void(0)") Smart 
+                    a(href="javascript:void(0)") Soueast 
+                    a(href="javascript:void(0)") SsangYong 
+                    a(href="javascript:void(0)") Subaru 
+                    a(href="javascript:void(0)") Suzuki 
+                    a(href="javascript:void(0)") TATA 
+                    a(href="javascript:void(0)") Toyota 
+                    a(href="javascript:void(0)") Troller 
+                    a(href="javascript:void(0)") UAZ 
+                .footerLinksItem
+                    a(href="javascript:void(0)") Vauxhall 
+                    a(href="javascript:void(0)") Vinfast 
+                    a(href="javascript:void(0)") Volvo 
+                    a(href="javascript:void(0)") Vortex 
+                    a(href="javascript:void(0)") VW 
+                    a(href="javascript:void(0)") Wey 
+                    a(href="javascript:void(0)") XCMG 
+                    a(href="javascript:void(0)") Zotye
+    section.privacy
+        .wrapper
+            .footerPrivacy
+                div.item1
+                    p © Copyright 2016 - 2021 RSCHIP. All Rights Reserved.
+                div.item2
+                    include ../socialIcons/socialIcons.component.pug
+                div.item3 
+                    a(href="javascript:void(0)") Privacy PolicyApp 
+                    a(href="javascript:void(0)") Privacy Policy
             
